--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install prospector[with_everything]==1.3.1
+          pip install .
       - name: Analysing the code with prospector
         run: |
           prospector
@@ -30,6 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mypy==0.812
+          pip install .
       - name: Running static types with mypy
         run: |
           mypy famapy
