Increase version to 0.7.0

--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -4,11 +4,12 @@ doc-warnings: false
 
 ignore-paths:
   - tests
+  - env
   - famapy/metamodels/fm_metamodel/transformations/uvl_parser/UVLLexer.py
   - famapy/metamodels/fm_metamodel/transformations/uvl_parser/UVLListener.py
   - famapy/metamodels/fm_metamodel/transformations/uvl_parser/UVLParser.py
 
-pep8:
+pycodestyle:
   options:
     max-line-length: 100
 
