--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mypy==0.812
+          pip install mypy
           pip install .
       - name: Running static types with mypy
         run: |
@@ -47,7 +47,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install pytest==5.4.3
+          pip install pytest
       - name: Running test
         run: |
           python -m pytest
