--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install prospector[with_everything]
+          pip install prospector[with_everything]==1.7.7
           pip install .
       - name: Analysing the code with prospector
         run: |
