feat: update ci for use conventional commits, create release and publish package

--- a/.github/workflows/conventionalpr.yml
+++ b/.github/workflows/conventionalpr.yml
@@ -2,9 +2,9 @@
 name: Conventional Commit Parser
 on:
   pull_request:
-    branches: [main, master, release]
+    branches: [main, master, develop]
     types: [opened, reopened, edited, review_requested, synchronize]
-    
+
 jobs:
   build:
     name: Conventional Commits
