refactor: renaming famapy by flamapy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           pip install .
       - name: Running static types with mypy
         run: |
-          mypy famapy
+          mypy flamapy
   pytest:
     runs-on: ubuntu-latest
     steps:
