--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,19 @@ jobs:
   prospector:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
       - name: Set up Python 3.9
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
           python-version: 3.9
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install prospector[with_everything]==1.10.3
+          pip install prospector[with_everything]
           pip install .
       - name: Analysing the code with prospector
         run: |
-          prospector -X
+          prospector
   mypy:
     runs-on: ubuntu-latest
     steps:
