--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,23 @@ jobs:
   prospector:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install prospector[with_everything]
+          python -m venv venv
+          source venv/bin/activate
+          pip install setuptools prospector[with_everything]==1.10.3
           pip install .
       - name: Analysing the code with prospector
         run: |
+          source venv/bin/activate
           prospector
+        shell: bash
   mypy:
     runs-on: ubuntu-latest
     steps:
