docs: trying to move away from prospector in favor of ruff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m venv venv
           source venv/bin/activate
-          pip install setuptools prospector[with_everything]==1.10.3
+          pip install setuptools ruff
           pip install .
       - name: Analysing the code with prospector
         run: |
