docs: trying to move away from prospector in favor of ruff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Python analisys
 on: [push, pull_request]
 
 jobs:
-  prospector:
+  ruff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,7 +21,7 @@ jobs:
       - name: Analysing the code with prospector
         run: |
           source venv/bin/activate
-          prospector
+          ruff check .
         shell: bash
   mypy:
     runs-on: ubuntu-latest
