--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,31 @@
-name: Python analisys
+name: Python analysis
 
 on: [push, pull_request]
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools
+          pip install .  # Install your package
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+  
   ruff:
+    needs: setup  # Wait for setup to complete
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -11,19 +33,20 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.9
-      - name: Install dependencies
+      - name: Restore dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+      - name: Installing Ruff linter
         run: |
-          python -m pip install --upgrade pip
-          python -m venv venv
-          source venv/bin/activate
-          pip install setuptools ruff
-          pip install .
-      - name: Analysing the code with prospector
+            pip install ruff
+      - name: Running Ruff linter
         run: |
-          source venv/bin/activate
-          ruff check .
-        shell: bash
+            ruff check .
+
   mypy:
+    needs: setup  # Wait for setup to complete
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -31,15 +54,20 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.9
-      - name: Install dependencies
+      - name: Restore dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+      - name: Installing mypy
         run: |
-          python -m pip install --upgrade pip
-          pip install mypy
-          pip install .
+            pip install mypy
       - name: Running static types with mypy
         run: |
           mypy -p flamapy
+
   pytest:
+    needs: setup  # Wait for setup to complete
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -47,11 +75,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.9
-      - name: Install dependencies
+      - name: Restore dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+      - name: Installing pytest
         run: |
-          python -m pip install --upgrade pip
-          pip install .
           pip install pytest
-      - name: Running test
+      - name: Running tests
         run: |
-          python -m pytest
+          pytest
