--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,27 @@ max-complexity = 10  # Equivalent to enabling mccabe in Prospector
 
 [tool.ruff.lint.pycodestyle]
 max-line-length = 100  # Matches your existing pycodestyle setting
+
+# MYPY CONFIGURATION
+[tool.mypy]
+scripts_are_modules = true
+show_traceback = true
+
+# Strict checking
+check_untyped_defs = true
+disallow_untyped_defs = true
+disallow_any_generics = true
+warn_no_return = true
+strict_optional = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+
+# Show error codes for type: ignore comments
+show_error_codes = true
+
+# Suppress missing imports errors
+ignore_missing_imports = true
+
+# Warn about unreachable or redundant code
+warn_unreachable = true
