fix: version bump and requerements update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools
-          pip install .  # Install your package
+          pip install .
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
